overflow fix

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -31,7 +31,8 @@ a {
 
 .container {
   display: flex;
-  flex: 1
+  flex: 1;
+  overflow: auto;
 }
 
 .menuContainer {
@@ -43,4 +44,5 @@ a {
 .contentContainer {
   width: 100%;
   padding: 5px 20px;
+  overflow: auto;
 }
